--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -2,8 +2,8 @@
 \section{Homomorphic Vector Commitments}\label{sec:veccom}
 
 \begin{definition}\label{def:hvc}
-  Let $\ring$ be a ring and let $q=q(\secpar)\in\NN$.
-  A homomorphic vector commitment scheme (HVC) for domain $\ring^\domlen_q$ is defined by four PPT algorithms $(\setup,\commit,\allowbreak\open,\verify)$.
+  Let $\ring$ be a ring and let $q\in\NN$.
+  A homomorphic vector commitment scheme (HVC) for domain $\ring^\domlen_q$ is defined by four PPT algorithms $\hvc=(\setup,\commit,\allowbreak\open,\verify)$.
 \begin{description}
     \item[$\params\gets\setup(\secparam,\tau)$] The setup algorithm takes as input the security parameter and the binary logarithm of the length of the committed vectors and outputs public parameters.
     \item[$c \gets \commit(\params,\vec{m})$] The commitment algorithm gets as input the public parameters and a vector $\vec{m}\in(\ring_q^\domlen)^{2^\tau}$ and outputs a commitment $c\in\ring_q^\comlen$.
@@ -11,33 +11,28 @@
     \item[$\vec{m}/\bot\gets \wverify(\params,c,t,d)$] The weak verification algorithm takes as input public parameters, a commitment, an index, and a decommitment and outputs either $\vec{m}\in\ring^\domlen_q$ or an error symbol.
     \item[$\vec{m}/\bot\gets \sverify(\params,c,t,d)$] The strong verification algorithm takes as input public parameters, a commitment, an index, and a decommitment and outputs either $\vec{m}\in\ring^\domlen_q$ or an error symbol.
   \end{description}
-  Let $\rho\in\NN$, $W\subseteq\ring$ and, $\zeta : \NN^3 \to \RR$.
-  A vector commitment is $(\rho,W,\zeta)$-weakly homomorphically correct, if for all security parameters $\secpar\in\NN$, vector lengths $2^\tau=\poly$, $\ell\in[\rho]$, vectors $\vec{m}^0,\dots,\vec{m}^{\ell-1}\in(\ring_q^\domlen)^{2^\tau}$, and indices $t\in[2^\tau-1]$ it holds that
+  Let $\rho,\varepsilon\in\NN$ and $W\subseteq\ring$.
+  A vector commitment is $(\rho,W,\varepsilon)$-homomorphically correct, if for all security parameters $\secpar\in\NN$, vector lengths $2^\tau=\poly$, $\ell\in[\rho]$, vectors $\vec{m}^1,\dots,\vec{m}^{\ell}\in(\ring_q^\domlen)^{2^\tau}$, indices $t\in[2^\tau]$, parameters $\params \gets \setup(\secparam,\tau)$, commitments $\vec{c}^i \gets \commit(\params,\vec{m}^i)$, and decommitments $\vec{d}^i \gets \open(\params,\vec{c}^i,\vec{m}^i,t)$ it holds that
   \[
-    \Pr\left[
-      \begin{aligned}
-      \params\gets&\mspace{\medmuskip}\setup(\secparam,\tau);\\
-      \vec{c}^i \gets&\mspace{\medmuskip} \commit(\params,\vec{m}^i);\\
-      \vec{d}^i \gets&\mspace{\medmuskip} \open(\params,\vec{c}^i,\vec{m}^i,t)\\
-      w^0,\dots,w^{\ell-1} \gets&\mspace{\medmuskip} W
-      \end{aligned}\!\!\!\!\!\!:
-      \sverify\Bigl(\params,\sum_{i=0}^{\ell-1}w^i\cdot \vec{c}^i,t,\sum_{i=0}^{\ell-1}w^i\cdot \vec{d}^i\Bigr) = \sum_{i=0}^{\ell-1}w^i\cdot\vec{m}^i_{t}
-    \right] \geq 1-\zeta(\secpar,\rho,\tau)
+    \Pr\mleft[
+      w^1,\dots,w^{\ell} \gets W :
+      \sverify\Bigl(\params,\sum_{i=1}^{\ell}w^i\cdot \vec{c}^i,t,\sum_{i=1}^{\ell}w^i\cdot \vec{d}^i\Bigr) = \sum_{i=1}^{\ell}w^i\cdot\vec{m}^i_{t}
+    \mright] \geq 1-2^{-\varepsilon}
   \]
 \end{definition}
 
 \begin{definition}[Position-Binding]
   An HVC is position binding if for all security parameters $\secpar$ and all PPT algorithms $\adv$ it holds that
   \[
-    \Pr\left[
+    \Pr\mleft[
       \begin{aligned}
-      \params\gets&\mspace{\medmuskip}\setup(\secparam,\tau);\\
-      (c,t,d_0,d_1) \gets&\mspace{\medmuskip} \adv(\params);\\
-      \vec{m}_0 \gets&\mspace{\medmuskip} \wverify(\params,c,t,d_0);\\
-      \vec{m}_1 \gets&\mspace{\medmuskip} \wverify(\params,c,t,d_1)
+      \params\gets{}&\setup(\secparam,\tau);\\
+      (c,t,d_0,d_1) \gets{}& \adv(\params);\\
+      \vec{m}_0 \gets{}& \wverify(\params,c,t,d_0);\\
+      \vec{m}_1 \gets{}& \wverify(\params,c,t,d_1)
       \end{aligned}:
-      \begin{aligned}&\mspace{\medmuskip}\vec{m}_0\neq \vec{m}_1\\ \land&\mspace{\medmuskip}\bot\not\in\{\vec{m}_0,\vec{m}_1\}\end{aligned}
-    \right]\leq \negl.
+      \vec{m}_0\neq \vec{m}_1 \land \bot\not\in\{\vec{m}_0,\vec{m}_1\}
+    \mright]\leq \negl.
   \]
 \end{definition}
 We require that a limited homomorphism holds, even for malicious commitments.
@@ -46,7 +41,7 @@ For any two, even malicious, commitments and their two respective openings that 
 \begin{definition}[Robust Homomorphism]
   \label{def:malhomhvc}
   Let $\hvc$ be a vector commitment scheme (HVC) for domain $\ring^\domlen_q$ with commitment length $\comlen$ and decommitment length $\oplen$.
-  $\hvc$ is robustly homomorphic if for all security parameters $\secpar\in\NN$, vector lengths $2^\tau=\poly$, public parameters $\params\gets\setup(\secparam,\tau)$, indices $t\in[2^\tau-1]$, (possibly malformed) commitments $\vec{c}^0,\vec{c}^1 \in \ring_q^\comlen$, and (possibly malformed) decommitments $\vec{d}^0,\vec{d}^1\in\ring_q^\oplen$ such that
+  $\hvc$ is robustly homomorphic if for all security parameters $\secpar\in\NN$, vector lengths $2^\tau=\poly$, public parameters $\params\gets\setup(\secparam,\tau)$, indices $t\in[2^\tau]$, (possibly malformed) commitments $\vec{c}^0,\vec{c}^1 \in \ring_q^\comlen$, and (possibly malformed) decommitments $\vec{d}^0,\vec{d}^1\in\ring_q^\oplen$ such that
   \[
     \sverify(\params,\vec{c}^0, t,\vec{d}^0)=\vec{m}^0 \quad \text{and} \quad \sverify(\params,\vec{c}^1, t,\vec{d}^1)=\vec{m}^1
   \]
@@ -64,13 +59,13 @@ To be able to use the greates arity while minimizing the infinity norm, we use a
 We note that any even arity, such as the binary decomposition used by Squirrel~\cite{CCS:FleSimZha22} is strictly worse than the next greater odd arity.
 We then show that the decomposition function has nice homomorphic properties.
 \begin{definition}[Balanced $(2\eta+1)$-ary decomposition of $\ring_q$ elements]
-    For any $a = \sum_{i=0}^{n-1} a_i\cdot x^i  \in \ring_q$,
-    denote by $(a_{i,0},\dots,a_{i,\lceil \log_{2\eta+1} q \rceil-1})^\intercal\in \{-\eta,\dots,\eta\}^{\lceil\log_{2\eta+1} q\rceil}$ the balanced $(2\eta+1)$-ary decomposition of $a_i$, i.e.,
-    \[a_{i} := \smashoperator{\sum_{j=0}^{\lceil\log_{2\eta+1} q\rceil - 1}} a_{i,j}\cdot (2\eta+1)^j.\]
+    For any $a = \sum_{i=1}^{n} a_i\cdot x^{i-1}  \in \ring_q$,
+    denote by $(a_{i,1},\dots,a_{i,\lceil \log_{2\eta+1} q \rceil})^\intercal\in \{-\eta,\dots,\eta\}^{\lceil\log_{2\eta+1} q\rceil}$ the balanced $(2\eta+1)$-ary decomposition of $a_i$, i.e.,
+    \[a_{i} := \smashoperator{\sum_{j=1}^{\lceil\log_{2\eta+1} q\rceil}} a_{i,j}\cdot (2\eta+1)^{j-1}.\]
     We define the following decomposition of $a$ into polynomials with coefficients in $\{-\eta,\dots,\eta\}$:
     \begin{equation*}
         \decomp_q: \ring_q \to \ring_q^{\lceil\log_{2\eta+1} q\rceil},\quad
-        \decomp_q(a) = \left(\sum_{i=0}^{n-1} a_{i,0}\cdot x^i, \dots, \sum_{i=0}^{n-1} a_{i,\lceil\log q\rceil -1}\cdot x^i \right).
+        \decomp_q(a) = \left(\sum_{i=1}^{n} a_{i,1}\cdot x^{i-1}, \dots, \sum_{i=1}^{n} a_{i,\lceil\log_{2\eta+1} q\rceil}\cdot x^{i-1} \right).
     \end{equation*}
 \end{definition}
 
